tests/ui/traits/alias/cross-crate.stderr
error[E0277]: the trait `SendSync` is not implemented for `Rc<u32>`
  --> $DIR/cross-crate.rs:14:17
   |
LL |     use_alias::<Rc<u32>>();
   |                 ^^^^^^^ the trait `SendSync` is not implemented for `Rc<u32>`, which is required by `Rc<u32>: SendSync`
   |
   = note: required for `Rc<u32>` to implement `SendSync`
note: required by a bound in `use_alias`
  --> $DIR/cross-crate.rs:10:17
   |
LL | fn use_alias<T: SendSync>() {}
   |                 ^^^^^^^^ required by this bound in `use_alias`

error[E0277]: the trait `SendSync` is not implemented for `Rc<u32>`
  --> $DIR/cross-crate.rs:14:17
   |
LL |     use_alias::<Rc<u32>>();
   |                 ^^^^^^^ the trait `SendSync` is not implemented for `Rc<u32>`, which is required by `Rc<u32>: SendSync`
   |
   = note: required for `Rc<u32>` to implement `SendSync`
note: required by a bound in `use_alias`
  --> $DIR/cross-crate.rs:10:17
   |
LL | fn use_alias<T: SendSync>() {}
   |                 ^^^^^^^^ required by this bound in `use_alias`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
